--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <link href="css/style.css" rel="stylesheet">
 
         <!-- Responsive css -->
-        <link href="./css/responsive-s-global.css" rel="stylesheet">
+        <link href="css/responsive-s-global.css" rel="stylesheet">
         <link href="css/responsive-s-padding.css" rel="stylesheet">
         <link href="css/responsive-s-services.css" rel="stylesheet">
         <link href="css/responsive-s-choose-me.css" rel="stylesheet">
